# oxc-plugin-react-compiler

./: .gitignore  .gitmodules  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  tsdown.config.ts  vite.config.ts
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/commands/: interview.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
crates/oxc_react_compiler/: Cargo.toml
crates/oxc_react_compiler/examples/: analyze_failures.rs  analyze_scope_output.rs  analyze_simple.rs  arrow_format_check.rs  blocking_issue.rs  body_diff_analysis.rs  cache_size_debug.rs  category_analysis.rs  check_near.rs  const_let_check.rs  count_format_issues.rs  debug_arrow.rs  debug_inner.rs  debug_inner2.rs  debug_inner3.rs  debug_memo.rs  debug_promo.rs  decl_diff.rs  dep_analysis.rs  diff_analysis.rs  empty_body_analysis.rs  empty_body_count.rs  empty_body_v2.rs  empty_fn_count.rs  failure_patterns.rs  false_memo.rs  false_memo_analysis.rs  flow_check.rs  let_promo.rs  list_passes.rs  medium_diff.rs  multi_scope_patterns.rs  near_pass.rs  near_pass_detailed.rs  near_pass_v2.rs  promo_analysis.rs  quick_wins.rs  recategorize.rs  same_cache_details.rs  show_diff.rs  (+10 more)
crates/oxc_react_compiler/src/: environment.rs  error.rs  lib.rs  options.rs  pipeline.rs  source_lines.rs  test_utils.rs
crates/oxc_react_compiler/src/codegen_backend/: ast_backend.rs  codegen_ast.rs  hir_to_ast.rs  mod.rs  module_emitter.rs  raw.rs  shared.rs
crates/oxc_react_compiler/src/codegen_backend/module_emitter/: blank_lines.rs  flow_cast.rs  function_replacement.rs  instrumentation.rs  mod.rs  postprocess.rs  sourcemap_verify.rs  transform_flag.rs
crates/oxc_react_compiler/src/hir/: build.rs  build_reactive_scope_terminals.rs  builder.rs  collect_hoistable_property_loads.rs  collect_optional_chain_deps.rs  compute_unconditional_blocks.rs  derive_minimal_dependencies.rs  dominator.rs  flatten_reactive_loops.rs  flatten_scopes_with_hooks.rs  globals.rs  merge_consecutive_blocks.rs  mod.rs  object_shape.rs  propagate_scope_dependencies_hir.rs  prune_maybe_throws.rs  prune_unused_labels.rs  scope_dependency_utils.rs  transform_fire.rs  types.rs  visitors.rs
crates/oxc_react_compiler/src/inference/: aliasing_effects.rs  analyse_functions.rs  infer_effect_dependencies.rs  infer_mutation_aliasing_effects.rs  infer_mutation_aliasing_ranges.rs  mod.rs
crates/oxc_react_compiler/src/optimization/: constant_propagation.rs  dead_code_elimination.rs  drop_manual_memoization.rs  inline_iifes.rs  inline_jsx_transform.rs  instruction_reordering.rs  lower_context_access.rs  mod.rs  name_anonymous_functions.rs  optimize_props_method_calls.rs  outline_functions.rs  outline_jsx.rs  remove_unnecessary_try_catch.rs
crates/oxc_react_compiler/src/reactive_scopes/: align_method_call_scopes.rs  align_object_method_scopes.rs  align_scopes.rs  build_codegen_shape.rs  build_reactive_function.rs  codegen.rs  codegen_ast.rs  codegen_reactive.rs  extract_scope_destructuring.rs  fuse_trailing_nullish_return_into_scope.rs  infer_reactive.rs  infer_scope_variables.rs  memoize_fbt_operands.rs  merge_overlapping_scopes.rs  merge_scopes_invalidate_together.rs  mod.rs  promote_used_temporaries.rs  propagate_early_returns.rs  propagate_scope_dependencies.rs  prune_always_invalidating_reactive.rs  prune_hoisted_contexts.rs  prune_initialization_dependencies.rs  prune_non_escaping_scopes.rs  prune_non_reactive_deps.rs  prune_non_reactive_deps_reactive.rs  prune_scopes.rs  prune_unused_labels_reactive.rs  prune_unused_lvalues.rs  prune_unused_scopes_reactive.rs  rename_variables.rs  stabilize_block_ids.rs
crates/oxc_react_compiler/src/ssa/: eliminate_redundant_phi.rs  enter_ssa.rs  mod.rs  rewrite_instruction_kinds.rs
crates/oxc_react_compiler/src/type_inference/: mod.rs
crates/oxc_react_compiler/src/validation/: mod.rs  validate_context_variable_lvalues.rs  validate_hooks_usage.rs  validate_locals_not_reassigned_after_render.rs  validate_memoized_effect_dependencies.rs  validate_module_type_provider_config.rs  validate_no_capitalized_calls.rs  validate_no_derived_computations_in_effects.rs  validate_no_freezing_known_mutable_functions.rs  validate_no_impure_functions_in_render.rs  validate_no_jsx_in_try_statement.rs  validate_no_ref_access_in_render.rs  validate_no_set_state_in_effects.rs  validate_no_set_state_in_render.rs  validate_preserved_manual_memoization.rs  validate_static_components.rs  validate_use_memo.rs
crates/oxc_react_compiler_napi/: Cargo.toml
crates/oxc_react_compiler_napi/src/: lib.rs
napi/: index.d.ts  index.js  oxc_react_compiler_napi.js  package.json  vite.js
napi/binding/: package.json
napi/npm/darwin-arm64/: README.md  package.json
napi/npm/darwin-x64/: README.md  package.json
napi/npm/linux-arm64-gnu/: README.md  package.json
napi/src/: compiler-options.ts  eslint-cache.ts  eslint-rules.ts  eslint-types.ts  eslint.ts  vite.ts
scripts/: bump-version.mjs  bump-version.ts  generate-babel-expectations.mjs  generate-babel-expectations.ts
tasks/conformance/: Cargo.toml
tasks/conformance/snapshots/: react_compiler.snap.md
tasks/conformance/src/: fixtures.rs  main.rs  normalizations.rs  pragmas.rs  reporting.rs
tests/: build-comparison-shadcn.test.ts  build-comparison-website.test.ts  build-comparison.test.ts  compiler-options.test.ts  eslint-component-syntax.test.ts  exact-transform-website-repros.test.ts  oxlint-plugin.test.ts  vite-plugin.test.ts
tests/eslint/: automatic-effect-dependencies.test.ts  capitalized-calls.test.ts  error-boundaries.test.ts  hooks.test.ts  no-ref-access.test.ts  no-unused-directives.test.ts  plugin.test.ts  purity-impure-calls.test.ts  set-state-in-render.test.ts  shared-utils.ts  sources.test.ts  suppression.test.ts  typescript.test.ts  use-memo.test.ts
tests/utils/: ast-compare.ts  build-compare.ts
(+111 files in other folders)
