[workspace]
members = ["crates/*", "tasks/*"]
resolver = "3"

[workspace.dependencies]
oxc = { version = "0.116.0", features = ["full"] }
oxc_allocator = { version = "0.116.0" }
oxc_ast = { version = "0.116.0" }
oxc_parser = { version = "0.116.0" }
oxc_semantic = { version = "0.116.0" }
oxc_codegen = { version = "0.116.0" }
oxc_span = { version = "0.116.0" }
oxc_diagnostics = { version = "0.116.0" }
oxc_syntax = { version = "0.116.0" }

insta = { version = "1.46.3" }
