[workspace]
members = ["crates/*", "tasks/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/eve0415/oxc-plugin-react-compiler"
homepage = "https://github.com/eve0415/oxc-plugin-react-compiler"
authors = ["eve0415"]
description = "Rust port of babel-plugin-react-compiler"
keywords = ["react", "compiler", "oxc", "vite"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
oxc = { version = "0.122.0", features = ["full"] }
oxc_allocator = { version = "0.122.0" }
oxc_ast = { version = "0.122.0" }
oxc_ast_visit = { version = "0.122.0" }
oxc_parser = { version = "0.122.0" }
oxc_semantic = { version = "0.122.0" }
oxc_codegen = { version = "0.122.0" }
oxc_span = { version = "0.122.0" }
oxc_diagnostics = { version = "0.122.0" }
oxc_syntax = { version = "0.122.0" }

indexmap = "2.13.0"
hmac = "0.12.1"
sha2 = "0.10.9"
regex = "1.12.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
napi = { version = "3.8.3", features = ["async"] }
napi-derive = "3.5.2"
napi-build = "2.3.1"
insta = { version = "1.46.3" }
