[package]
name = "oxc_react_compiler"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust port of babel-plugin-react-compiler"
repository = "https://github.com/user/oxc-plugin-react-compiler"

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_codegen = { workspace = true }
oxc_span = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_syntax = { workspace = true }
indexmap = "2.13.0"
hmac = "0.12.1"
sha2 = "0.10.9"

[dev-dependencies]
insta = { workspace = true }
