[package]
name = "oxc_react_compiler"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Rust port of babel-plugin-react-compiler"
repository = "https://github.com/eve0415/oxc-plugin-react-compiler"
homepage = "https://github.com/eve0415/oxc-plugin-react-compiler"
authors = ["eve0415"]
keywords = ["react", "compiler", "oxc", "vite"]
categories = ["development-tools", "web-programming"]

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_codegen = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
indexmap = "2.13.0"
hmac = "0.12.1"
sha2 = "0.10.9"
