[package]
name = "oxc_react_compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_codegen = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
indexmap = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
