[package]
name = "oxc_react_compiler_napi"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "N-API bindings for oxc_react_compiler"
repository = "https://github.com/eve0415/oxc-plugin-react-compiler"
homepage = "https://github.com/eve0415/oxc-plugin-react-compiler"
authors = ["eve0415"]

[lib]
crate-type = ["cdylib"]

[dependencies]
oxc_react_compiler = { path = "../oxc_react_compiler" }
napi = { version = "3.8.3", features = ["async"] }
napi-derive = "3.5.2"

[build-dependencies]
napi-build = "2.3.1"
