[package]
name = "oxc_react_compiler_napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "N-API bindings for oxc_react_compiler"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxc_react_compiler = { path = "../oxc_react_compiler" }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
