[package]
name = "conformance"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Conformance test runner for oxc_react_compiler"
publish = false

[dependencies]
oxc_react_compiler = { path = "../../crates/oxc_react_compiler" }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_codegen = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
regex = "1.12.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
