[package]
name = "conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conformance test runner for oxc_react_compiler"
publish = false

[dependencies]
oxc_react_compiler = { path = "../../crates/oxc_react_compiler" }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_codegen = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
